Revert "Change GitHub url"
This reverts commit cfe49664e90368fb7d599ea8da1b5a368fcec5f3.

--- a/config.yaml
+++ b/config.yaml
@@ -12,7 +12,7 @@ params:
       개발, 클라우드 및 컨테이너 등을 정리하는 기술 블로그입니다.
   socialIcons:
     - name: 'github'
-      url: 'https://github.com/minwook1m'
+      url: 'https://github.com/minuchi'
     - name: 'email'
       url: 'mailto:me@minwoo.kim'
   env: 'production'
